--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,7 +7,10 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
+
+#include: package:flutter_lints/flutter.yaml
+include: package:solid_lints/analysis_options.yaml
+
 
 linter:
   # The lint rules applied to this project can be customized in the
@@ -22,6 +25,7 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    include: package:solid_lints/analysis_options_test.yaml
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
